--- a/app/_static/markdown.css
+++ b/app/_static/markdown.css
@@ -18,6 +18,8 @@
     --color-markdown-table-border: #dfe2e5;
     --color-markdown-table-tr-border: #c6cbd1;
     --color-markdown-code-bg: #1b1f230d;
+    --mermaid-primary-color: #f4f4f4; /* Blue as an example primary color */
+    --mermaid-secondary-color: #1D0C72; /* Gray as an example secondary color */
 }
 [data-theme="dark"] {
     --color-text-primary: #c9d1d9;
@@ -49,7 +51,7 @@
 }
 .markdown-body {
   font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 16px;
+  font-size: 18px;
   color: var(--color-text-primary);
   line-height: 1.6;
   word-wrap: break-word;
@@ -308,4 +310,52 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   padding: 0;
+}
+
+/* Enhanced Styles for Mermaid Diagrams - custom-mermaid.css */
+
+@import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap');
+
+/* General styling for the container */
+.mermaid {
+  max-width: 100%; /* Prevent diagrams from exceeding the container's width */
+  overflow-x: auto; /* Enable horizontal scrolling for wide diagrams */
+  background-color: #f9f9f9; /* Light background for better contrast */
+  border-radius: 8px; /* Soften edges for a modern look */
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Subtle shadow for depth */
+  font-family: 'Tajawal', sans-serif; /* Tajawal font for all text */
+  --node-border-color: var(--mermaid-primary-color); /* Using primary color for node borders */
+  --edge-color: var(--mermaid-secondary-color); /* Using secondary color for edges */
+}
+
+/* SVG specific adjustments for better scaling and readability */
+svg {
+  max-width: 100% !important; /* Ensure SVG fits container */
+  height: auto !important; /* Maintain aspect ratio */
+}
+
+
+/* Enhance text readability */
+
+.mermaid text {
+  font-family: 'Tajawal', sans-serif; /* Tajawal font for better readability */
+  font-size: 16px; /* Optimal size for readability */
+}
+
+/* Style nodes, edges, and markers for visual appeal */
+.mermaid .node, .mermaid .cluster {
+  fill: #fff; /* Background color for nodes and clusters */
+  stroke: #4a90e2; /* Border color */
+  stroke-width: 1.5px; /* Border width */
+}
+
+.mermaid .edgePath .path {
+  stroke: #4a90e2; /* Color of the lines connecting nodes */
+  stroke-width: 1.5px; /* Line thickness for visibility */
+}
+
+.mermaid .edgeLabel {
+  background-color: #e3f2fd; /* Background for edge labels for distinction */
+  border-radius: 3px; /* Rounded edges for labels */
+  padding: 2px 4px; /* Padding around text */
 }
